# AdventOfCode

./: .gitignore  Load-DotEnv.ps1  README.md
2019/Day1/Python/: src.py
C/: CMakeLists.txt  CMakeSettings.json
C/2019/Day1/: app.h  app_config.h  app_debug_interface.h  app_intrinsics.h  app_math.h  app_memory.h  app_msvc.h  app_platform.h  app_random.h  app_shared.h  app_simd.h  app_stream.c  app_stream.h  app_tokenizer.c  app_tokenizer.h  basetypes.h  main.c  proj_platform.h
CSharp/: AOC.CSharp.sln
CSharp/2019/Day1/: Directory.Build.props
CSharp/2019/Day1/App/: AOC.2019.Day01.csproj  Program.cs
CSharp/2019/Day1/Tests/: AOC.2019.Day01.Tests.csproj  UnitTest1.cs
JavaScript/2015/: AOC_Day1.js  AOC_Day10.js  AOC_Day11.js  AOC_Day13.js  AOC_Day2.js  AOC_Day3.js  AOC_Day4.js  AOC_Day5.js  AOC_Day6.js  AOC_Day6pt2.js  AOC_Day7.js  AOC_Day8.js  AOC_Day9.js
PowerShell/2019/Day1/: Day1.ps1
Python/2019/Day1/: src.py
TypeScript/: deno.jsonc
TypeScript/2015/: Day1.ts  Day2.ts  Day3.ts  Day4.ts
TypeScript/2019/Day1/: run.ts
